--- a/src/ui/create-order.fxml
+++ b/src/ui/create-order.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="650.0" prefWidth="1217.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="768.0" prefWidth="424.0">
          <children>
@@ -20,9 +20,9 @@
                   <TableView prefHeight="523.0" prefWidth="424.0">
                     <columns>
                       <TableColumn prefWidth="33.0" />
-                      <TableColumn prefWidth="219.0" text="Producto" />
-                        <TableColumn minWidth="0.0" prefWidth="65.0" text="Cantidad" />
-                        <TableColumn prefWidth="108.0" text="Precio" />
+                      <TableColumn prefWidth="180.0" text="Producto" />
+                        <TableColumn minWidth="0.0" prefWidth="59.0" text="Cantidad" />
+                        <TableColumn prefWidth="101.0" text="Precio" />
                     </columns>
                   </TableView>
                </children>
